# vio-hello-world-impl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/cost_function/: reprojection_se3_factor.hpp  reprojection_se3_k_xyz_factor.hpp  se3_left_pgo_factor.hpp
backend/cost_function/impl/: reprojection_se3_factor_impl.hpp  reprojection_se3_k_xyz_factor_impl.hpp  se3_left_pgo_factor_impl.hpp
backend/example/: gauss_newton_method.cpp  hello_backend.cpp  pgo_test.cpp
backend/example/common/: read_g2o_format.hpp  type.hpp
backend/parameter_block/: camera_intrinsic_parameter_block.hpp  point_parameter_block.hpp  se3_parameter_block.hpp
backend/parameterization/: se3left_parametrization.hpp
backend/sensor_fusion/imu/: imu_database.h  imu_frame_state.h  imu_types.cc  imu_types.h  serialization_utils.h
common/: draw_utils.h  math_utils.hpp  print_tools.hpp  string_printf.hpp  wall_time.h
dfm/: CMakeLists.txt
dfm/example/: lightglue_test.cpp  superpoint_test.cpp
dfm/internal/: lightglue.hpp  parameter.hpp  superpoint.hpp  tensorrt_common.hpp
dfm/params/: splg_config.yaml
dfm/src/: lightglue.cpp  superpoint.cpp
docs/: README.md  _config.yml
docs/configuring/: analytics.md  custom.md  defaults.md  domain.md  extra.md  gemfile.md  sidebar.md
feat/: CMakeLists.txt
feat/example/: harris_test.cc  lk_optical_flow_test.cc  orb_test.cc  orbslam_feat_test.cc
feat/harris/: harris.cc
feat/optical_flow/: lkpyramid.cc  lkpyramid.h
feat/orb/: orb_feature.cc  orb_feature.h  orb_interface.h
feat/orb_slam/: orbextractor.cpp  orbextractor.hpp  orbpattern.cpp  orbpattern.hpp
feature_extraction/: CMakeLists.txt
geometry/: CMakeLists.txt
nlls/: CMakeLists.txt  gauss_newton_method.cpp
tiny_ceres_solver/: CMakeLists.txt  README.md
tiny_ceres_solver/doc/: README.md
tiny_ceres_solver/doc/uml/: addResidual.puml  ceres.puml  preprocess.puml  preprocess_flow.puml  solver.puml
tiny_ceres_solver/example/: ba_problem_analytic.cc  curve_fitting_analytic.cc  helloworld_analytic_diff.cc  helloworld_analytic_diff.cpp
tiny_ceres_solver/example/ba_example/: CMakeLists.txt  ba_demo.cpp  ba_demo_6d.cpp  baproblem.cpp  baproblem.hpp  parametersse3.cpp  parametersse3.hpp  se3.hpp
tiny_ceres_solver/include/tceres/: autodiff_cost_function.h  autodiff_local_parameterization.h  context.h  cost_function.h  covariance.h  crs_matrix.h  dynamic_cost_function.h  dynamic_numeric_diff_cost_function.h  evaluation_callback.h  fpclassify.h  gradient_checker.h  jet.h  local_parameterization.h  loss_function.h  numeric_diff_options.h  problem.h  rotation.h  sized_cost_function.h  types.h
tiny_ceres_solver/include/tceres/internal/: autodiff.h  config.hpp  eigen.h  fixed_array.h  manual_constructor.h  numeric_diff.h  port.h  scoped_ptr.h  variadic_evaluate.h
tiny_ceres_solver/internal/tceres/: array_utils.cc  array_utils.h  array_utils_test.cc  block_evaluate_preparer.cc  block_evaluate_preparer.h  block_jacobian_writer.cc  block_jacobian_writer.h  block_random_access_dense_matrix.cc  block_random_access_dense_matrix.h  block_random_access_dense_matrix_test.cc  block_random_access_diagonal_matrix.cc  block_random_access_diagonal_matrix.h  block_random_access_diagonal_matrix_test.cc  block_random_access_matrix.cc  block_random_access_matrix.h  block_random_access_sparse_matrix.cc  block_random_access_sparse_matrix.h  block_random_access_sparse_matrix_test.cc  block_sparse_matrix.cc  block_sparse_matrix.h  block_structure.cc  block_structure.h  callbacks.cc  callbacks.h  casts.h  collections_port.h  compressed_row_jacobian_writer.cc  compressed_row_jacobian_writer.h  compressed_row_sparse_matrix.cc  compressed_row_sparse_matrix.h  conjugate_gradients_solver.cc  conjugate_gradients_solver.h  conjugate_gradients_solver_test.cc  context.cc  context_impl.cc  context_impl.h  coordinate_descent_minimizer.cc  coordinate_descent_minimizer.h  corrector.cc  corrector.h  (+135 more)
tiny_ceres_solver/internal/tceres/slam/: inv_depth_parameter_block.h  pose_local_parameterization.h  pose_parameter_block.h  rotation_utils.h
tiny_ceres_solver/internal/tceres/slam/impl/: pose_local_parameterization.hpp  pose_parameter_block.hpp
tool/: CMakeLists.txt  cpu_check.cpp
vio_hw/: CMakeLists.txt  TODO.md
vio_hw/internal/: camera_calibration.hpp  constant_motion_model.hpp  estimator.hpp  frame.hpp  keyframe.hpp  keypoint.hpp  loop_closer.hpp  map_manager.hpp  map_point.hpp  mapping.hpp  optimization.hpp  setting.hpp  system_status.hpp  visual_frontend.hpp  world_manager.hpp
vio_hw/internal/feat/: feat.cpp  feature.hpp  good_feature_impl.hpp  orb_cv_impl.hpp  orb_slam_impl.hpp  superpoint_impl.hpp
vio_hw/internal/tracker/: lightglue_impl.hpp  optical_flow_impl.hpp  tracker_base.hpp
vio_hw/internal/viz/: camera_visualizer.hpp  pangolin_visualization.hpp  rviz_visualization.hpp  visualization_base.hpp
vio_hw/node/: hello_world_vio.cpp  run_hilti_node.cpp  run_kitti_node.cpp
vio_hw/output/euroc_gt/: euroc2tum.sh
vio_hw/output/euroc_gt/MH_05_difficult/: full.traj.0.txt
vio_hw/output/euroc_gt/MH_05_difficult/stereo_vip/: full.traj.2.txt  full.traj.3.txt  full.traj.txt  kf.traj.1.txt  kf.traj.4.txt
vio_hw/output/kitti_gt/: kitti_tum_00.txt  kitti_tum_02.txt
vio_hw/params/: euroc_stereo_imu.yaml
vio_hw/params/euroc/: euroc_stereo_imu.yaml
vio_hw/params/kitti/: kitti_00-02.yaml
vio_hw/params/rviz/: euroc_setting.rviz  hw-vio.rviz  kitti_setting.rviz  multi_camera.rviz
vio_hw/params/zed/: zed2i.yaml
vio_hw/src/: camera_calibration.cpp  estimator.cpp  frame.cpp  loop_closer.cpp  map_manager.cpp  map_point.cpp  mapping.cpp  optimization.cpp  setting.cpp  visual_frontend.cpp  world_manager.cpp
vio_hw/src/feat/: feat.cpp  good_feature_impl.cpp  orb_cv_impl.cpp  orb_slam_impl.cpp  superpoint_impl.cpp
vio_hw/src/tracker/: lightglue_impl.cpp  optical_flow_impl.cpp  tracker_base.cpp
vio_hw/src/viz/: camera_visualizer.cpp  pangolin_visualization.cpp  rviz_visualization.cpp  visualization_base.cpp
vio_hw/vio/: map_point.hpp  setting.hpp  world_manager.hpp
(+23 files in other folders)
